test-harness/AIM/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: aim
  labels:
    name: aim
