test-harness/AIM/05-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aim-ingress
  namespace: aim
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aim.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aim-server
            port:
              number: 43801
  - host: aim-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aim-server
            port:
              number: 43800
  - host: minio-aim.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
  - host: minio-api-aim.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9000
